ClearType pixel order not respected by WebRender
Categories
(Core :: Graphics: WebRender, defect, P1)
Tracking
()
People
(Reporter: rowbot, Assigned: lsalzman)
References
Details
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
A reddit user has reported that when enabling webrender on Windows 7 with an nvidia GPU, they are seeing colorful fringes around all text.
| Reporter | ||
Comment 2•6 years ago
|
||
User's about:support: https://pastebin.com/S09wpvS7
Screenshot comparison: https://imgur.com/a/dR6KO2z
| Reporter | ||
Comment 3•6 years ago
|
||
I see in the supplied about:support, the ClearType Pixel Structure is BGR. Is that something that webrender handles or does it only support RGB for ClearType?
Updated•6 years ago
|
Comment 4•6 years ago
|
||
It seems like this is a problem on Win10 as well.
Updated•6 years ago
|
Updated•6 years ago
|
Comment 5•6 years ago
|
||
We also seem to have this problem if Direct2D is disabled.
Comment 6•6 years ago
|
||
This is handled in Skia here:
Lee, can you hook this up?
| Assignee | ||
Comment 7•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
Comment 9•6 years ago
|
||
| bugherder | ||
Comment 10•6 years ago
|
||
Comment on attachment 9067467 [details]
Bug 1553910 - pass DWrite subpixel order into Skia and WebRender. r?jrmuizel
Beta/Release Uplift Approval Request
- User impact if declined: Color fringing on text on screens using a different subpixel order.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This isn't too risky, it's mostly just plumbing some state around.
- String changes made/needed:
Comment 11•6 years ago
|
||
Julien, is possible to add something to 67 release notes about their being color fringing on text on screens with BGR pixel order when WebRender is enabled?
Updated•6 years ago
|
Comment 12•6 years ago
|
||
Some background on estimated impact of this issue:
- We only discovered the problem through a user that manually enabled WebRender on win7
- The problem has existed for the lifetime of WebRender (i.e it's been on Nightly since September 2018)
- The same problem happens when ever Direct2D is disabled. Direct2D is disabled for approx 25% of Windows users
Comment 13•6 years ago
|
||
Added as a known issue to the Fx67 release notes. Doesn't seem likely that we're going to try to backport this fix to a 67 dot release, though, so marking that as wontfix.
Comment 14•6 years ago
|
||
Comment on attachment 9067467 [details]
Bug 1553910 - pass DWrite subpixel order into Skia and WebRender. r?jrmuizel
webrender fix for 68.0b6
Comment 15•6 years ago
|
||
| bugherder uplift | ||
Description
•